# CryptoBot

./: CMakeLists.txt  README.md
config/: config.ini
gui/: app.js  index.html
include/core/: common.hpp  config_parser.hpp  fee_gate.hpp  market_state.hpp  models.hpp  spsc_ring_buffer.hpp
include/execution/: gateway.hpp  trade_engine.hpp  trade_journal.hpp
include/risk/: risk_manager.hpp
include/strategies/: strategies.hpp
src/: main.cpp
